--- a/project6/style.css
+++ b/project6/style.css
@@ -1,190 +1,193 @@
-:root{
-    --purple500:#281154;
-    --purple300:#270082;
-    --purple600:#1b0058;
-    --red600:#f9f6ff;
-    --body:#f9f6ff;
+:root {
+  --purple500: #281154;
+  --purple300: #270082;
+  --purple600: #1b0058;
+  --red600: #f9f6ff;
+  --body: #f9f6ff;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html,body{
-    font-family: sans-serif;
-    font-weight: 300;
-    line-height: 1.4;
-    scroll-behavior: smooth;
+html,
+body {
+  font-family: sans-serif;
+  font-weight: 300;
+  line-height: 1.4;
+  scroll-behavior: smooth;
 }
-header{
-    background-color: var(--purple300);
-    position: sticky;
-    top: 0;
-    z-index: 100;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+html{
+  font-size: 62.5%;
+}
+header {
+  background-color: var(--purple300);
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 section {
-    scroll-margin: 100px;
+  scroll-margin: 100px;
 }
-.container{
-    max-width: 1200px;
-    /* border: 2px solid rebeccapurple; */
-    margin: 0 auto;
-} 
-ul{
-text-decoration: none;
-    display: flex;
-    /* border: 2px solid red; */
-    color: white;
-    list-style: none;
-    gap: 20px;
+.container {
+  max-width: 1200px;
+  /* border: 2px solid rebeccapurple; */
+  margin: 0 auto;
+  padding: 0 20px;
 }
-ul a{
-    text-decoration: none;
+ul {
+  text-decoration: none;
+  display: flex;
+  /* border: 2px solid red; */
+  color: white;
+  list-style: none;
+  gap: 20px;
 }
-nav{
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 0;
-    align-items: center;
+ul a {
+  text-decoration: none;
 }
-.logo{
-    font-size: 32px;
-    font-weight: 400;
+nav {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
+  align-items: center;
 }
-nav ul li{
-    border-bottom: 2px solid transparent;
-    transition: 0.2s ease-in;
-    color: white;
+.logo {
+  font-size: 32px;
+  font-weight: 400;
 }
-nav ul li:hover{
-    border-bottom: 2px solid white;
-    transition: 0.2s ease-in;
+nav ul li {
+  border-bottom: 2px solid transparent;
+  transition: 0.2s ease-in;
+  color: white;
+}
+nav ul li:hover {
+  border-bottom: 2px solid white;
+  transition: 0.2s ease-in;
 }
 
-.hero_section{
-    background-image: url(images/Frame\ 1.png);
-    height: 100vh;
-    display: grid;
-    color: white;
-    place-items: center;
-    text-align: center;
+.hero_section {
+  background-image: url(images/Frame\ 1.png);
+  height: 100vh;
+  display: grid;
+  color: white;
+  place-items: center;
+  text-align: center;
 }
-.video_section ,
-.hero_section{
-    position: relative;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+.video_section,
+.hero_section {
+  position: relative;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.hero_section .container{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+.hero_section .container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
-.hero_section h1{
-    font-size: 96px;
+.hero_section h1 {
+  font-size: 9.6rem;
 }
-.hero_section h3{
-    font-size: 32px;
+.hero_section h3 {
+  font-size: 3.2rem;
 }
 /* music section s */
-.music_section{
-    padding-top: 50px;
-    background-color: #281154;
-    color: white;
+.music_section {
+  padding-top: 50px;
+  background-color: #281154;
+  color: white;
 }
-.music_section .container{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    justify-content: center;
-    align-items: center;
+.music_section .container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
 }
-.ipad-iphone-img{
-    position: relative;
-    top: 400px;
-    margin-top: -400px;
+.ipad-iphone-img {
+  position: relative;
+  top: 400px;
+  margin-top: -400px;
 }
-button{
-    padding: 10px 15px;
-    border: none;
-    transition: 0.2s ease-in-out;
+button {
+  padding: 10px 15px;
+  border: none;
+  transition: 0.2s ease-in-out;
 }
-button:hover{
-    opacity: 0.8;
-    transition: 0.2s ease-in-out;
-
+button:hover {
+  opacity: 0.8;
+  transition: 0.2s ease-in-out;
 }
-.primary-btn
-{
-    background-color: red;
-    color: white;
+.primary-btn {
+  background-color: red;
+  color: white;
 }
-.secondary_btn{
-    color: white;
-    background-color: var(--purple300);
+.secondary_btn {
+  color: white;
+  background-color: var(--purple300);
 }
-.about-music{
-    padding-top: 500px;
-    display: grid;
-    place-items: center;
-    gap: 50px;
-    text-align: center;
-    margin-bottom: 50px;
+.about-music {
+  padding-top: 500px;
+  display: grid;
+  place-items: center;
+  gap: 50px;
+  text-align: center;
+  margin-bottom: 50px;
 }
-.video_section{
-    background-image: url(images/th.jpg);
-    min-height: 800px;
-    display: grid;
-    place-items: center  ;
-    color: black;
-    text-align: center;
+.video_section {
+  background-image: url(images/th.jpg);
+  min-height: 800px;
+  display: grid;
+  place-items: center;
+  color: black;
+  text-align: center;
 }
-.video_section .container{
-    display: flex;
-    flex-direction: column;
-    gap:30px;
-    margin-top: -200px;
-
+.video_section .container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-top: -200px;
 }
-.gift-section{
-    display: flex;
-    justify-content: center;
-    margin: 100px 0;
-    gap: 50px;
+.gift-section {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0;
+  gap: 50px;
 }
-.gift_content{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+.gift_content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
-.footer_upper{
-    background-color: #270082;
-    padding:20px;
+.footer_upper {
+  background-color: #270082;
+  padding: 20px;
 }
-.footer .container{
-    display: flex;
-    justify-content: space-between;
-    color: white;
+.footer .container {
+  display: flex;
+  justify-content: space-between;
+  color: white;
 }
 /* .footer .container */
-.footer_links ul{
-    display:block;
+.footer_links ul {
+  display: block;
 }
-.footer_upper h4{
-padding-bottom: 10px;
-border-bottom: 2px solid white;
-margin-bottom: 10px;
+.footer_upper h4 {
+  padding-bottom: 10px;
+  border-bottom: 2px solid white;
+  margin-bottom: 10px;
 }
-.footer_lower{
-    display: flex;
-    color: white;
-    justify-content: center;
-background-color: #281154;
+.footer_lower {
+  display: flex;
+  color: white;
+  justify-content: center;
+  background-color: #281154;
 }
-@media screen and (max-width: 600px) {
+/* responsive  */
+/* @media screen and (max-width: 600px) {
 
 .logo{
     font-size: 20px;
@@ -196,4 +199,63 @@ background-color: #281154;
     font-size: 15px;
     margin-right: 23px;
 }
+} */
+
+@media (max-width:1024px){
+  .gift_card img{
+width: 40rem;
+  }
+  .ipad-iphone-img {
+    margin-top: -200px;
+    top: 200px;
+  }
+  .ipad-iphone-img  img,.mac_img img{
+   max-width: 100%; 
+  }
+  .about-music{
+    padding-top: 300px;
+  }
+}
+@media (max-width: 786px) {
+  html{
+    font-size: 40%;
+  }
+  .gift-section{
+    flex-direction: column;
+  }
+  .gift-section img{
+    width: 100%;
+  }
+  nav ul {
+    display: none;
+  }
+  .menu_bar i {
+    font-size: 24px;
+  }
+
+
+  .footer_upper .container{
+    flex-wrap: wrap;
+  gap:  20px;
+  }
+.footer_links{
+  min-width: 200px;
+  /* flex: 1; */
+}
+
+}
+@media (min-width: 786px) {
+  .menu_bar {
+    display: none;
+  }
+}
+@media (max-width:425px){
+  .ipad-iphone-img {
+    margin-top: -100px;
+    top: 100px;
+  }
+  
+  .about-music{
+    padding-top: 200px;
+  }
 }
